# Actividad_5182025

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  rag.py
src/: app.py  memoria.py  rag.py
