[project]
name = "actividad-5182025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma>=0.2.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langsmith>=0.3.42",
    "ollama>=0.4.8",
    "protobuf==3.20.3",
    "pypdf>=5.5.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.45.1",
]
